--- a/index.html
+++ b/index.html
@@ -1,135 +1,151 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>PinballTest</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>PinballTest</title>
+  <link rel="shortcut icon" href="TemplateData/favicon.ico">
 
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background: #000; /* optional, looks cleaner */
-      }
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #000;
+    }
 
-      #unity-container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-      }
+    #unity-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
 
-      #unity-canvas {
-        width: 100%;
-        height: 100%;
-      }
+    #unity-canvas {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
 
-      #unity-loading-bar {
-        position: absolute;
-        width: 50%;
-        left: 25%;
-        bottom: 20px;
-      }
-    </style>
-  </head>
+    #unity-loading-bar {
+      position: absolute;
+      width: 50%;
+      left: 25%;
+      bottom: 20px;
+    }
+  </style>
+</head>
 
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <button id="unity-fullscreen-button" onclick="toggleFullscreen()"></button>
-      <canvas id="unity-canvas"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
+<body>
+  <div id="unity-container" class="unity-desktop">
+    <button id="unity-fullscreen-button" onclick="toggleFullscreen()"></button>
+    <canvas id="unity-canvas"></canvas>
+    <div id="unity-loading-bar">
+      <div id="unity-progress-bar-empty">
+        <div id="unity-progress-bar-full"></div>
       </div>
-      <div id="unity-warning"></div>
     </div>
+    <div id="unity-warning"></div>
+  </div>
 
-    <script>
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+  <script>
+    const container = document.querySelector("#unity-container");
+    const canvas = document.querySelector("#unity-canvas");
+    const loadingBar = document.querySelector("#unity-loading-bar");
+    const progressBarFull = document.querySelector("#unity-progress-bar-full");
+    const fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    const warningBanner = document.querySelector("#unity-warning");
 
-      function isFullscreen() {
-        return document.fullscreenElement || document.webkitFullscreenElement || document.msFullscreenElement;
+    function isFullscreen() {
+      return document.fullscreenElement || document.webkitFullscreenElement || document.msFullscreenElement;
+    }
+
+    function rebuildFullscreenGUI() {
+      if (isFullscreen()) {
+        fullscreenButton.style.backgroundImage = "url('TemplateData/fullscreen-button-in.png')";
+      } else {
+        fullscreenButton.style.backgroundImage = "url('TemplateData/fullscreen-button-out.png')";
       }
+    }
 
-      function rebuildFullscreenGUI() {
-        if (isFullscreen()) {
-          fullscreenButton.style.backgroundImage = "url('TemplateData/fullscreen-button-in.png')";
-        } else {
-          fullscreenButton.style.backgroundImage = "url('TemplateData/fullscreen-button-out.png')";
-        }
-      }
+    function unityShowBanner(msg, type) {
+      const div = document.createElement('div');
+      div.innerHTML = msg;
+      if (type === 'error') div.style = 'background: red; padding: 10px;';
+      else if (type === 'warning') div.style = 'background: yellow; padding: 10px;';
 
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
+      warningBanner.appendChild(div);
+
+      if (type !== 'error') {
+        setTimeout(() => {
+          warningBanner.removeChild(div);
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function () {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
+        }, 5000);
       }
 
-      function toggleFullscreen() {
-        if (isFullscreen()) {
-          document.exitFullscreen?.() || document.webkitExitFullscreen?.() || document.msExitFullscreen?.();
-        } else {
-          var element = document.getElementById("unity-container");
-          element.requestFullscreen?.() || element.webkitRequestFullscreen?.() || element.msRequestFullscreen?.();
-        }
+      warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+    }
+
+    function toggleFullscreen() {
+      if (isFullscreen()) {
+        document.exitFullscreen?.() || document.webkitExitFullscreen?.() || document.msExitFullscreen?.();
+      } else {
+        container.requestFullscreen?.() || container.webkitRequestFullscreen?.() || container.msRequestFullscreen?.();
       }
+    }
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/Build.data.unityweb",
-        frameworkUrl: buildUrl + "/Build.framework.js.unityweb",
-        codeUrl: buildUrl + "/Build.wasm.unityweb",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "PinballTest",
-        productVersion: "0.1.0",
-        showBanner: unityShowBanner,
-      };
+    const buildUrl = "Build";
+    const loaderUrl = buildUrl + "/Build.loader.js";
 
+    const config = {
+      dataUrl: buildUrl + "/Build.data.unityweb",
+      frameworkUrl: buildUrl + "/Build.framework.js.unityweb",
+      codeUrl: buildUrl + "/Build.wasm.unityweb",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "PinballTest",
+      productVersion: "0.1.0",
+      showBanner: unityShowBanner,
+      webGLContextAttributes: { alpha: false, antialias: true, preserveDrawingBuffer: false },
+      matchWebGLToCanvasSize: true
+    };
 
-      // Leave this commented out so Unity auto-matches size to canvas:
-      //config.matchWebGLToCanvasSize = false;
+    // Mobile DPI scaling
+    function resizeCanvas() {
+      const dpr = window.devicePixelRatio || 1;
+      const maxDPR = 1.5; // prevent extremely high pixel density on mobile
+      canvas.width = canvas.clientWidth * Math.min(dpr, maxDPR);
+      canvas.height = canvas.clientHeight * Math.min(dpr, maxDPR);
+    }
 
-      loadingBar.style.display = "block";
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
 
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-      document.body.appendChild(script);
+    // Hide fullscreen button on mobile
+    if (/Mobi|Android/i.test(navigator.userAgent)) {
+      fullscreenButton.style.display = 'none';
+    }
 
-      document.onfullscreenchange = rebuildFullscreenGUI;
-    </script>
-  </body>
+    loadingBar.style.display = "block";
+
+    const script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = 100 * progress + "%";
+      }).then((unityInstance) => {
+        loadingBar.style.display = "none";
+      }).catch((message) => {
+        alert(message);
+      });
+    };
+    document.body.appendChild(script);
+
+    document.onfullscreenchange = rebuildFullscreenGUI;
+  </script>
+</body>
 </html>
