--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>PinballTest</title>
-  <link rel="shortcut icon" href="TemplateData/favicon.ico">
+  <link rel="icon" type="image/png" href="TemplateData/favicon.png"> <!-- ✅ favicon from TemplateData -->
 
   <style>
     html, body {
@@ -29,26 +29,55 @@
       display: block;
       width: 100%;
       height: 100%;
+      background: #000;
     }
 
+    /* ✅ Loading Bar Styles */
     #unity-loading-bar {
       position: absolute;
-      width: 50%;
-      left: 25%;
-      bottom: 20px;
+      width: 40%;
+      left: 30%;
+      bottom: 30px;
+      height: 20px;
+      background-color: rgba(255, 255, 255, 0.15);
+      border-radius: 10px;
+      overflow: hidden;
+      display: none;
+    }
+
+    #unity-progress-bar-full {
+      width: 0%;
+      height: 100%;
+      background: linear-gradient(90deg, #00b3ff, #0078ff);
+      border-radius: 10px;
+      transition: width 0.25s ease;
+    }
+
+    /* ✅ Optional fullscreen button */
+    #unity-fullscreen-button {
+      position: absolute;
+      right: 15px;
+      bottom: 15px;
+      width: 38px;
+      height: 38px;
+      border: none;
+      background: url('TemplateData/fullscreen-button-out.png') no-repeat center/contain;
+      cursor: pointer;
+      z-index: 10;
     }
   </style>
 </head>
 
 <body>
-  <div id="unity-container" class="unity-desktop">
+  <div id="unity-container">
     <button id="unity-fullscreen-button" onclick="toggleFullscreen()"></button>
     <canvas id="unity-canvas"></canvas>
+
+    <!-- ✅ Loading bar -->
     <div id="unity-loading-bar">
-      <div id="unity-progress-bar-empty">
-        <div id="unity-progress-bar-full"></div>
-      </div>
+      <div id="unity-progress-bar-full"></div>
     </div>
+
     <div id="unity-warning"></div>
   </div>
 
@@ -75,16 +104,13 @@
       div.innerHTML = msg;
       if (type === 'error') div.style = 'background: red; padding: 10px;';
       else if (type === 'warning') div.style = 'background: yellow; padding: 10px;';
-
       warningBanner.appendChild(div);
-
       if (type !== 'error') {
         setTimeout(() => {
           warningBanner.removeChild(div);
           warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
         }, 5000);
       }
-
       warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
     }
 
@@ -112,18 +138,18 @@
       matchWebGLToCanvasSize: true
     };
 
+    // ✅ Fullscreen fix (no cropping)
     function resizeCanvas() {
-  const dpr = window.devicePixelRatio || 1;
-  const maxDPR = 1.5;
-  const width = window.innerWidth;
-  const height = window.innerHeight;
+      const dpr = window.devicePixelRatio || 1;
+      const maxDPR = 1.5;
+      const width = window.innerWidth;
+      const height = window.innerHeight;
 
-  canvas.style.width = width + 'px';
-  canvas.style.height = height + 'px';
-  canvas.width = width * Math.min(dpr, maxDPR);
-  canvas.height = height * Math.min(dpr, maxDPR);
-}
-
+      canvas.style.width = width + 'px';
+      canvas.style.height = height + 'px';
+      canvas.width = width * Math.min(dpr, maxDPR);
+      canvas.height = height * Math.min(dpr, maxDPR);
+    }
 
     window.addEventListener('resize', resizeCanvas);
     window.addEventListener('orientationchange', resizeCanvas);
@@ -134,13 +160,14 @@
       fullscreenButton.style.display = 'none';
     }
 
+    // ✅ Show loading bar
     loadingBar.style.display = "block";
 
     const script = document.createElement("script");
     script.src = loaderUrl;
     script.onload = () => {
       createUnityInstance(canvas, config, (progress) => {
-        progressBarFull.style.width = 100 * progress + "%";
+        progressBarFull.style.width = (progress * 100) + "%";
       }).then((unityInstance) => {
         loadingBar.style.display = "none";
       }).catch((message) => {
