--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>PinballTest</title>
-  <link rel="icon" type="image/png" href="TemplateData/favicon.png"> <!-- ✅ favicon from TemplateData -->
+  <link rel="icon" type="image/png" href="TemplateData/favicon.png"> <!-- ✅ Tab icon -->
 
   <style>
     html, body {
@@ -32,17 +32,18 @@
       background: #000;
     }
 
-    /* ✅ Loading Bar Styles */
+    /* ✅ Loading screen container */
     #unity-loading-bar {
       position: absolute;
       width: 40%;
       left: 30%;
-      bottom: 30px;
+      bottom: 50px;
       height: 20px;
       background-color: rgba(255, 255, 255, 0.15);
       border-radius: 10px;
       overflow: hidden;
       display: none;
+      z-index: 5;
     }
 
     #unity-progress-bar-full {
@@ -53,7 +54,20 @@
       transition: width 0.25s ease;
     }
 
-    /* ✅ Optional fullscreen button */
+    /* ✅ Loading icon (logo above the bar) */
+    #unity-logo {
+      position: absolute;
+      left: 50%;
+      bottom: 90px;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 80px;
+      background: url('TemplateData/favicon.png') no-repeat center/contain;
+      z-index: 6;
+      display: none;
+    }
+
+    /* ✅ Fullscreen button */
     #unity-fullscreen-button {
       position: absolute;
       right: 15px;
@@ -73,7 +87,8 @@
     <button id="unity-fullscreen-button" onclick="toggleFullscreen()"></button>
     <canvas id="unity-canvas"></canvas>
 
-    <!-- ✅ Loading bar -->
+    <!-- ✅ Game logo + progress bar -->
+    <div id="unity-logo"></div>
     <div id="unity-loading-bar">
       <div id="unity-progress-bar-full"></div>
     </div>
@@ -88,6 +103,7 @@
     const progressBarFull = document.querySelector("#unity-progress-bar-full");
     const fullscreenButton = document.querySelector("#unity-fullscreen-button");
     const warningBanner = document.querySelector("#unity-warning");
+    const logo = document.querySelector("#unity-logo");
 
     function isFullscreen() {
       return document.fullscreenElement || document.webkitFullscreenElement || document.msFullscreenElement;
@@ -160,7 +176,8 @@
       fullscreenButton.style.display = 'none';
     }
 
-    // ✅ Show loading bar
+    // ✅ Show logo and loading bar
+    logo.style.display = "block";
     loadingBar.style.display = "block";
 
     const script = document.createElement("script");
@@ -169,6 +186,7 @@
       createUnityInstance(canvas, config, (progress) => {
         progressBarFull.style.width = (progress * 100) + "%";
       }).then((unityInstance) => {
+        logo.style.display = "none";
         loadingBar.style.display = "none";
       }).catch((message) => {
         alert(message);
